tests/src/frontend/typechecking/invalid/overridable_kclass.sk
class Foo() {
  overridable fun foo(): void {
    void
  }
}
